# QTTestPlaneGCS

./: .gitignore  CMakeLists.txt  Connect.cpp  Connect.h  GLine.cpp  GLine.h  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
testData/: lineData.txt
